--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 <main>
   <img src="/assets/images/avatar-jessica.jpeg" alt="Logo" class="logo">
+  <img src="./assets/images/avatar-jessica.jpeg" alt="Logo" class="logo">
   <h1>Jessica Randall</h1>
   <p class="location">London, United Kingdom<p>
   <p class="bio">"Front-end developer and avid reader."</p>
